@@ -77,6 +77,7 @@ extern c_lang_id_t  opt_lang;           ///< Current language.
 extern bool         opt_prompt;         ///< Print the prompt?
 extern bool         opt_read_conf;      ///< Read configuration file?
 extern bool         opt_semicolon;      ///< Print `;` at end of gibberish?
+extern bool         opt_trailing_ret;   ///< Print trailing return type?
 extern bool         opt_typedefs;       ///< Load C/C++ standard `typedef`s?
 extern bool         opt_using;          ///< Print `using` in C++11 and later?
 
