@@ -11,6 +11,7 @@ c++decl> set
     lang=C++23
     prompt
     semicolon
+  notrailing-return
     using
 c++decl> struct S
 c++decl> declare ! as operator (r as reference to const S) returning bool
