@@ -11,6 +11,7 @@ c++decl> set
     lang=C++23
     prompt
   nosemicolon
+  notrailing-return
     using
 c++decl> typedef int Int
 c++decl> declare x as int
@@ -42,6 +43,7 @@ c++decl> set
     lang=C++23
     prompt
     semicolon
+  notrailing-return
     using
 c++decl> declare x as int
 int x;
