@@ -67,6 +67,7 @@ cdecl> set
     lang=K&RC
     prompt
     semicolon
+  notrailing-return
     using
 cdecl> declare a as array 9 of int
 int a[9];
@@ -88,6 +89,7 @@ cdecl> set
     lang=C23
     prompt
     semicolon
+  notrailing-return
     using
 cdecl> declare a as array 9 of int
 int a[9];
@@ -109,6 +111,7 @@ c++decl> set
     lang=C++23
     prompt
     semicolon
+  notrailing-return
     using
 c++decl> declare a as array 9 of int
 int a[9];
